test/spec_vectors/f64/fail/module_11.wat
(module (func (result f64) (f64.trunc (i64.const 0))))